# tpt-gov-nz

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-DEMO.md  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
.mimocode/: .cron-lock
apps/portal-citizen/: next.config.ts  package.json  tsconfig.json
apps/portal-policy/: next.config.ts  package.json  tsconfig.json
apps/portal-staff/: middleware.ts  next.config.mjs  package.json  tsconfig.json
crates/gov-federation-core/: Cargo.toml
crates/gov-federation-core/src/: audit.rs  envelope.rs  error.rs  identity.rs  lib.rs
crates/gov-federation-node/: Cargo.toml
crates/gov-federation-node/src/: config.rs  lib.rs  node.rs  quic.rs  transport.rs
crates/gov-identity-core/: Cargo.toml
crates/gov-identity-core/src/: credential.rs  did.rs  error.rs  lib.rs
crates/gov-mtls/: Cargo.toml
crates/gov-mtls/src/: lib.rs
crates/gov-zk/: Cargo.toml
crates/gov-zk/src/: lib.rs
docker/: demo.yml  phase1.yml
docker/init/: dia.sql  ird.sql  moh.sql  winz.sql
docs/: international-fork-guide.md  iso-27001-compliance.md  sovereign-ollama.md
load-tests/: README.md
load-tests/k6/: dept-ird.js  gateway.js  identity.js
policies/: acc.rego  caa.rego  corrections.rego  crownlaw.rego  customs.rego  defence.rego  dia.rego  doc.rego  dpmc.rego  eqc.rego  ero.rego  ethnic.rego  fenz.rego  gcsb.rego  hud.rego  ird.rego  linz.rego  maritime.rego  mbie.rego  mch.rego  mfat.rego  mfe.rego  moe.rego  moh.rego  moj.rego  mot.rego  mpi.rego  msd.rego  nzdf.rego  nzqa.rego  nzsis.rego  nzta.rego  oranga.rego  pacific.rego  police.rego  publicservice.rego  regulation.rego  retirement.rego  sfo.rego  statsnz.rego  (+7 more)
scripts/: gen-mtls-certs.sh  gen-phase3-dept.mjs  gen-phase3-emit.mjs
services/gov-dept-acc/: Cargo.toml  Dockerfile
services/gov-dept-caa/: Cargo.toml  Dockerfile
services/gov-dept-corrections/: Cargo.toml  Dockerfile
services/gov-dept-crownlaw/: Cargo.toml  Dockerfile
services/gov-dept-customs/: Cargo.toml  Dockerfile
services/gov-dept-defence/: Cargo.toml  Dockerfile
services/gov-dept-dia/: Cargo.toml  Dockerfile
services/gov-dept-doc/: Cargo.toml  Dockerfile
services/gov-dept-dpmc/: Cargo.toml  Dockerfile
services/gov-dept-eqc/: Cargo.toml  Dockerfile
services/gov-dept-ero/: Cargo.toml  Dockerfile
services/gov-dept-ethnic/: Cargo.toml  Dockerfile
services/gov-dept-fenz/: Cargo.toml  Dockerfile
services/gov-dept-gcsb/: Cargo.toml  Dockerfile
services/gov-dept-hud/: Cargo.toml  Dockerfile
services/gov-dept-ird/: Cargo.toml  Dockerfile
services/gov-dept-ird/migrations/: 001_citizens.sql  002_income.sql  003_tax_assessments.sql  004_gst.sql  005_kiwisaver.sql  006_working_for_families.sql  007_actions_log.sql  008_seed_dev.sql  009_ingestion_runs.sql
services/gov-dept-ird/src/: actions.rs  consent.rs  db.rs  error.rs  lib.rs  main.rs  opa.rs  routes.rs  tests.rs
services/gov-dept-linz/: Cargo.toml  Dockerfile
services/gov-dept-linz/migrations/: 001_citizens.sql  002_linz_titles.sql  003_linz_ownership.sql  005_actions_log.sql  007_seed_dev.sql  008_ingester_idempotency.sql
services/gov-dept-linz/src/: actions.rs  consent.rs  db.rs  error.rs  lib.rs  main.rs  opa.rs  routes.rs  tests.rs
services/gov-dept-maritime/: Cargo.toml  Dockerfile
services/gov-dept-mbie/: Cargo.toml  Dockerfile
services/gov-dept-mch/: Cargo.toml  Dockerfile
services/gov-dept-node/: Cargo.toml
services/gov-dept-node/src/: audit.rs  consent.rs  main.rs  opa.rs  routes.rs
services/gov-dept-winz/: Cargo.toml  Dockerfile
services/gov-dept-winz/migrations/: 001_citizens.sql  002_benefits.sql  003_payments.sql  004_case_notes.sql  005_actions_log.sql  006_ingestion_runs.sql  007_seed_dev.sql  008_ingester_idempotency.sql
services/gov-dept-winz/src/: actions.rs  consent.rs  db.rs  error.rs  lib.rs  main.rs  opa.rs  routes.rs  tests.rs
services/gov-gateway/: Cargo.toml  Dockerfile
services/gov-gateway/src/: auth.rs  circuit_breaker.rs  main.rs  rate_limit.rs  routes.rs  state.rs  telemetry.rs
services/gov-identity-server/: Cargo.toml  Dockerfile
services/gov-identity-server/migrations/: 001_did_documents.sql  002_data_grants.sql
services/gov-identity-server/src/: main.rs  routes.rs
services/gov-ingester-acc/: Cargo.toml  Dockerfile
services/gov-ingester-acc/fixtures/: acc_batch.json
services/gov-ingester-acc/src/: config.rs  db.rs  ingest.rs  main.rs  models.rs  raw.rs  tests.rs  transform.rs  transport.rs
services/gov-ingester-acc/src/transport/: legacy.rs  mock.rs
services/gov-ingester-dia/: Cargo.toml  Dockerfile
services/gov-ingester-dia/fixtures/: dia_batch.json
services/gov-ingester-dia/src/: config.rs  db.rs  ingest.rs  main.rs  models.rs  raw.rs  tests.rs  transform.rs  transport.rs
services/gov-ingester-dia/src/transport/: legacy.rs  mock.rs
services/gov-ingester-moj/: Cargo.toml  Dockerfile
services/gov-ingester-moj/fixtures/: moj_batch.json
services/gov-ingester-moj/src/: config.rs  db.rs  ingest.rs  main.rs  models.rs  raw.rs  tests.rs  transform.rs  transport.rs
services/gov-ingester-moj/src/transport/: legacy.rs  mock.rs
services/gov-ingester-mot/: Cargo.toml  Dockerfile
services/gov-ingester-mot/fixtures/: mot_batch.json
services/gov-ingester-mot/src/: config.rs  db.rs  ingest.rs  main.rs  models.rs  raw.rs  tests.rs  transform.rs  transport.rs
services/gov-ingester-mot/src/transport/: legacy.rs  mock.rs
services/gov-ingester-pacific/: Cargo.toml  Dockerfile
services/gov-ingester-pacific/fixtures/: pacific_batch.json
services/gov-ingester-pacific/src/: config.rs  db.rs  ingest.rs  main.rs  models.rs  raw.rs  tests.rs  transform.rs  transport.rs
services/gov-ingester-pacific/src/transport/: legacy.rs  mock.rs
services/gov-schema-registry/: Cargo.toml  Dockerfile
services/gov-schema-registry/migrations/: 001_schemas.sql  002_seed.sql
services/gov-schema-registry/src/: db.rs  error.rs  lib.rs  main.rs  routes.rs  validate.rs
(+1893 files in other folders)
