[workspace]
resolver = "2"

members = [
    "crates/gov-federation-core",
    "crates/gov-federation-node",
    "crates/gov-identity-core",
    "services/gov-gateway",
    "services/gov-identity-server",
    "services/gov-dept-node",
    "services/gov-dept-ird",
    "services/gov-ingester-ird",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["tpt-gov-nz contributors"]
repository = "https://github.com/tpt-open-source/tpt-gov-nz"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# QUIC / federation
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }

# Crypto / identity
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"

# Config
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
