[workspace]
resolver = "2"

members = [
    "crates/gov-federation-core",
    "crates/gov-federation-node",
    "crates/gov-identity-core",
    "crates/gov-mtls",
    "crates/gov-zk",
    "services/gov-gateway",
    "services/gov-identity-server",
    "services/gov-schema-registry",
    "services/gov-dept-node",
    "services/gov-dept-ird",
    "services/gov-ingester-ird",
    "services/gov-dept-winz",
    "services/gov-ingester-winz",
    "services/gov-dept-moh",
    "services/gov-ingester-moh",
    "services/gov-dept-dia",
    "services/gov-ingester-dia",
    "services/gov-dept-acc",
    "services/gov-ingester-acc",
    "services/gov-dept-nzta",
    "services/gov-ingester-nzta",
    "services/gov-dept-moj",
    "services/gov-ingester-moj",
    "services/gov-dept-police",
    "services/gov-ingester-police",
    "services/gov-dept-hud",
    "services/gov-ingester-hud",
    "services/gov-dept-nzqa",
    "services/gov-ingester-nzqa",
    "services/gov-dept-msd",
    "services/gov-ingester-msd",
    "services/gov-dept-mbie",
    "services/gov-ingester-mbie",
    "services/gov-dept-linz",
    "services/gov-ingester-linz",
    "services/gov-dept-statsnz",
    "services/gov-ingester-statsnz",
    "services/gov-dept-corrections",
    "services/gov-ingester-corrections",
    "services/gov-dept-customs",
    "services/gov-ingester-customs",
    "services/gov-dept-mpi",
    "services/gov-ingester-mpi",
    "services/gov-dept-doc",
    "services/gov-ingester-doc",
    "services/gov-dept-tpk",
    "services/gov-ingester-tpk",
    "services/gov-dept-treasury",
    "services/gov-ingester-treasury",
    "services/gov-dept-dpmc",
    "services/gov-ingester-dpmc",
    "services/gov-dept-publicservice",
    "services/gov-ingester-publicservice",
    "services/gov-dept-crownlaw",
    "services/gov-ingester-crownlaw",
    "services/gov-dept-sfo",
    "services/gov-ingester-sfo",
    "services/gov-dept-oranga",
    "services/gov-ingester-oranga",
    "services/gov-dept-women",
    "services/gov-ingester-women",
    "services/gov-dept-pacific",
    "services/gov-ingester-pacific",
    "services/gov-dept-ethnic",
    "services/gov-ingester-ethnic",
    "services/gov-dept-tearawhiti",
    "services/gov-ingester-tearawhiti",
    "services/gov-dept-regulation",
    "services/gov-ingester-regulation",
    "services/gov-dept-worksafe",
    "services/gov-ingester-worksafe",
    "services/gov-dept-retirement",
    "services/gov-ingester-retirement",
    "services/gov-dept-mfe",
    "services/gov-ingester-mfe",
    "services/gov-dept-eqc",
    "services/gov-ingester-eqc",
    "services/gov-dept-mot",
    "services/gov-ingester-mot",
    "services/gov-dept-caa",
    "services/gov-ingester-caa",
    "services/gov-dept-maritime",
    "services/gov-ingester-maritime",
    "services/gov-dept-fenz",
    "services/gov-ingester-fenz",
    "services/gov-dept-moe",
    "services/gov-ingester-moe",
    "services/gov-dept-ero",
    "services/gov-ingester-ero",
    "services/gov-dept-tec",
    "services/gov-ingester-tec",
    "services/gov-dept-mch",
    "services/gov-ingester-mch",
    "services/gov-dept-mfat",
    "services/gov-ingester-mfat",
    "services/gov-dept-defence",
    "services/gov-ingester-defence",
    "services/gov-dept-nzdf",
    "services/gov-ingester-nzdf",
    "services/gov-dept-gcsb",
    "services/gov-ingester-gcsb",
    "services/gov-dept-nzsis",
    "services/gov-ingester-nzsis",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["tpt-gov-nz contributors"]
repository = "https://github.com/tpt-open-source/tpt-gov-nz"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# QUIC / federation
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }

# Crypto / identity
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
curve25519-dalek = { version = "4", features = ["rand_core"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
prost-types = "0.13"

# Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.28"

# Config
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
