[package]
name = "gov-federation-node"
description = "QUIC-based federation protocol node for tpt-gov-nz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gov-federation-core = { path = "../gov-federation-core" }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
quinn = { workspace = true }
rustls = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
