[package]
name = "gov-mtls"
description = "Mutual TLS configuration + client/server helpers for tpt-gov-nz internal services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "server", "server-auto"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
