[package]
name = "gov-zk"
description = "Zero-knowledge age & residency proofs for tpt-gov-nz"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
curve25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
