[package]
name = "gov-dept-ird"
description = "Inland Revenue Department native service for tpt-gov-nz"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-dept-ird"
path = "src/main.rs"

[dependencies]
gov-federation-core = { path = "../../crates/gov-federation-core" }
gov-federation-node = { path = "../../crates/gov-federation-node" }
gov-identity-core = { path = "../../crates/gov-identity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
