[package]
name = "gov-dept-node"
description = "Department data node template for tpt-gov-nz — each department runs one of these"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-dept-node"
path = "src/main.rs"

[dependencies]
gov-federation-core = { path = "../../crates/gov-federation-core" }
gov-federation-node = { path = "../../crates/gov-federation-node" }
gov-identity-core = { path = "../../crates/gov-identity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
reqwest = { version = "0.12", optional = true }

[features]
# Enables the OPA sidecar client in `src/opa.rs`. Off by default; the local
# `src/consent.rs` evaluation is used as the fallback.
opa = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true }
