[package]
name = "gov-gateway"
description = "API gateway for tpt-gov-nz — JWT/mTLS auth, rate limiting, routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-gateway"
path = "src/main.rs"

[dependencies]
gov-federation-core = { path = "../../crates/gov-federation-core" }
gov-identity-core = { path = "../../crates/gov-identity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
http-body-util = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = "9"
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
