[package]
name = "gov-identity-server"
description = "Identity server for tpt-gov-nz — DID registration, VC issuance, consent management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-identity-server"
path = "src/main.rs"

[dependencies]
gov-identity-core = { path = "../../crates/gov-identity-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
