[package]
name = "gov-ingester-mot"
description = "Ministry of Transport data ingester for tpt-gov-nz (pulls from legacy Ministry of Transport systems, writes to dept DB)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-ingester-mot"
path = "src/main.rs"

[dependencies]
gov-federation-core = { path = "../../crates/gov-federation-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate"] }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
