[package]
name = "gov-schema-registry"
description = "Schema registry for tpt-gov-nz data contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gov-schema-registry"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate"] }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http = "1"
hyper = { workspace = true }

[profile.release]
opt-level = 3
